--- a/galactic-galaxy/src/pages/blog.astro
+++ b/galactic-galaxy/src/pages/blog.astro
@@ -14,7 +14,7 @@
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/blog">Blog</a>
-		<h1>私について</h1>
-        <h2>今回はAstroフレームワークを使って高速で動くブログを作ります</h2>
+		<h1>ブログ投稿</h1>
+        <h2>このブログページは今後学習していく内容をポストしていきます。</h2>
 	</body>
 </html>
